# mcp-pmt

./: README.md  diplomovka.kilepr  hlavný.tex  main.tex  questions  some_of_MCP_publications.bib  Články.mm
CERN/ARP-presentation/: arp.kilepr  prez.aux  prez.tex
CERN/ARP-presentation/.kile/: arp.kilepr.gui
CERN/number_of_photons/: PvsClockF.csv  freq  numberOfPhotons.jl  power.jl
CERN/number_of_photons/data/: DATA21.CSV  DATA22.CSV
data/: C1FFT-input_short-cable_transfer-function-measurement_3dot3V_28ns-width_6ns-rise-fallB00000.trc  ampl-only.txt  header.txt  test.txt  time-ampl.txt
koncepty/: uvod.tex
literature/: bibliography.bib
simulations/comsol/: Params.txt  README.md  different_velocities.mph  launch_comsol  oom-kill-stop  outputVelocities.jl  parseExport.jl  particle (conflicted copy 2023-04-19 123552).mph  particle.mph  particle5e6.mph  particleHistogram.jl  qyAnalysis.jl
simulations/comsol/c_library/: CMakeLists.txt  c_functions.kdev4  pivi_params.json  pivi_params.txt
simulations/comsol/c_library/src/: boost_wrapper.cpp  boost_wrapper.hpp  erfinv.c  erfinv.h  interface.c  pivi.c  pivi.h  test.c
simulations/comsol/particle1e6/: particle10e6.mph  particle1e6counted.mph  particle1e6pic100.mph
simulations/comsol/pivi/: getframes.sh  (+4 more)
simulations/tlm/: README.md  sim-param.json  tlm-explore.jl  tlm-ploting.jl  tlm.jl
simulácie/: g.py  giudicotti.jl  gt.jl  guest-analyse.jl  guest.jl  guidicotti2 copy 2.jl  guidicotti2 copy.jl  guidicotti2.jl  input-signal-poly.csv  oldGiudicotti.jl
simulácie/tlm/: sim-param.json  tlm.jl  tlm2.jl
(+168 files in other folders)
